<resources>
    <string name="app_name">twoday_kotlin</string>
    <string name="label">Enter email</string>
    <string name="label2">Password</string>
    <string name="label3">Confirm Password</string>
    <string name="label4">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_mailid">Enter your Email Id</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_name">Enter your name</string>
</resources>